/*
 * Copyright 2021, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.validation;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "MessageValidatorTestOneofProto";
option java_package = "io.spine.test.validate.oneof";

// `oneof` declarations for `OneofTest`.

message OneofWithRequiredFields {

    option (required_field) = "first | second";

    oneof fields {
        string first = 1;
        string second = 2;
    }
}

message OneofWithOptionalFields {
    oneof fields {
        string first = 1;
        string second = 2;
    }
}

message OneofAndOtherAreRequired {

    option (required_field) = "first | second";

    oneof fields {
        string first = 1;
        string second = 2;
    }

    string third = 3 [(required) = true];
}

message OneofWithValidation {

    oneof fields {
        string no_validation = 1;
        string with_validation = 2 [(pattern).regex = "^[A-Za-z0-9+]+$"];
    }
}

message RequiredOneofWithValidation {

    option (required_field) = "raw_value | valid_value";

    oneof fields {
        string raw_value = 1;
        string valid_value = 2 [(pattern).regex = "^[A-Za-z0-9+]+$"];
    }
}
